[tool.poetry]
name = "pvu-bot"
version = "1.0"
description = "PVU bot"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
packages = [{include = "pvu_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.4.0"
loguru = "^0.7.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
